shift nav fix

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -500,7 +500,6 @@ label,
     right: 2px;
     top: 60px;
     width: calc(100vw - 20px);
-    max-width: 300px;
   }
 
   .notification-dropdown {
